--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ R2_BUCKET=your_bucket_name
 R2_ENDPOINT=https://youraccountid.r2.cloudflarestorage.com
 R2_ACCESS_KEY=your_access_key
 R2_SECRET_KEY=your_secret_key
+REACT_APP_API_BASE=https://https://nfat-prep-india.onrender.com/api
